Only add dummy browser row if the path is readable

Prevent empty rows from appearing in the browser when parent directories
are deleted externally. Additionally, delete the parent directory from
the tree if it is not found.

https://bugzilla.gnome.org/show_bug.cgi?id=722380